bMotion CHANGELOG
-----------------

* = changed/fixed
+ = added
- = removed

*  James           changed the failsafe plugin to have (slightly) more intelligent responses
*  James           updated light plugin to trigger correctly
+  James           added .bmadmin abstract delete <abstract> <index>
+  James           added function in extra/fact.tcl to make bMotion forget everything about an item

v0.0.8

*  Kevin           moved the handling of jms' (real) wellbeing code into an extra module, and referenced it from complex question
*  James           fixed spelling error in name of onjoin plugin
*  James           fixed onjoin plugin to use new abstracts system
*  Kevin           moved some question handling into the complex question handler from other places so as not to break "how're you" with generic "how" questions
*  James           changed CHANGELOG format now that other people are actively coding
*  Shruuf          bMotion now supports !-channels as wells as #-channels
*  James           hugging the bot will make it happier and hornier
*  James           don't repeatedly wave back if repeatedly waved at
*  James           moved newer activate plugin to end of plugins list because it was interrupting the startrek one
*  James           set complex_readings to break out after triggering
*  Greg            added more words to complex_scrap
*  James           some improvements to learning new words
*  James           stop output_pinky from modifying short lines
*  James           fixed a couple of typos in abstracts
*  James           hopefully fixed [ 662782 ] Occasional No Such User errors
*  James           changed !bminfo to give better information, and only be available to +ov users
*  James           fixed complex_trivia to skip output plugins
*  James           bMotion now learns new away messages it sees people use

+  Kevin           added a "how're you?" handler
+  Kevin           added a "do you want/need" handler